# ChangeLog for xfce-extra/thunar-volman
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Aug 2007; Christoph Mende <angelos@gentoo.org>
  thunar-volman-9999.ebuild:
  Added ~arm

  13 Aug 2007; Christoph Mende <angelos@gentoo.org>
  thunar-volman-9999.ebuild:
  Added ~alpha

  07 Jun 2007; Christoph Mende <angelos@gentoo.org>
  +thunar-volman-9999.ebuild:
  Initial commit
