@@ -1,3 +1,5 @@
+DIST thunar-volman-0.3.80.tar.bz2 353504 RMD160 9291f1fd3cf05ef9647308f5d463ea8eecbbd6b3 SHA1 c4bfbcde72baf2d4520dfa4db0de43616de7a0b8 SHA256 e400682afb0f5fcca231fe8793b31769f3645a9b5b0604d251e05b17d48217ee
+EBUILD thunar-volman-0.3.80.ebuild 486 RMD160 901e40b81786c704ea5660e5e7a7f0a2cc48841b SHA1 b78b6bab2882d3746e511ed6682900f240c2e46c SHA256 39ed293542ace42ebf8a5a4debee33e4427a28e519424529d7edef77abfb1db7
 EBUILD thunar-volman-9999.ebuild 507 RMD160 a32e9b0d692571936a548b71031f3fe05b81eec9 SHA1 7ad0a9f888c33fe2fde398e81ca8ab315ae0d0fa SHA256 75fd12dd18d5f7bc5d966aeaf28968c428337258bb7cef34ec7218e1b2804467
-MISC ChangeLog 417 RMD160 f64f37dc3b9d12fe60ac0dca4f7216d40bd8c751 SHA1 744fb23ae4a060ccae601e603ff5cc67d2744a6f SHA256 f01bdf33977af0f11658b9e39aaae5a6baf259047173da75969f3c2398bd7147
+MISC ChangeLog 524 RMD160 a074445b0b7c073e4fd2beacef499098734e8189 SHA1 993790105601afcc88b5b9df21f7e79a6b322380 SHA256 97f7e1362baeea353ea694dbb759944260329429a4a6579a06d60687b0b9db8c
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
