@@ -1,0 +1,22 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI=2
+
+inherit xfce4
+
+xfce4_goodies
+
+DESCRIPTION="Thunar volume management"
+HOMEPAGE="http://foo-projects.org/~benny/projects/thunar-volman"
+
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+IUSE="debug"
+
+RDEPEND="dev-libs/dbus-glib
+	sys-apps/hal
+	>=xfce-extra/exo-0.3.80[hal]
+	>=xfce-base/thunar-0.9"
+
+DOCS="AUTHORS ChangeLog NEWS README THANKS"
