@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/thunar-volman
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  07 Nov 2008; Christoph Mende <angelos@gentoo.org> thunar-volman-0.3.80:
+  Initial release ebuild
 
   13 Aug 2007; Christoph Mende <angelos@gentoo.org>
   thunar-volman-9999.ebuild:
